Fixed overflowing of carousel

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 .jumbotron {
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -41,11 +41,21 @@ body {
 }
 
 .carousel {
-    width: 500px;
     margin: 0 auto;
     margin-bottom: 50px;
     padding: 20px;
     border: 3px solid #000;
     border-radius: 10px;
     
+}
+
+@media(min-width: 750px) {
+    .carousel {
+        width: 500px;
+    }
+}
+@media(max-width: 750px) {
+    .carousel {
+        width: auto;
+    }
 }
